# pygeomatch

./: .gitignore  Appariement.py  README.md  pyproject.toml
pymatch/: __init__.py  default_parameters.json  geometric_matching_of_areas.py  match.py  multi_criteria.py  multi_criteria2.py
src/pygeomatch/: geometric_matching_of_areas.py  match.py  multi_criteria.py  multi_criteria2.py  optimal_transport.py  radial.py  util.py
src/pymatch/: geometric_matching_of_areas.py  match.py  multi_criteria.py  multi_criteria2.py
tests/: test_geometric_matching_of_areas.py  test_multi_criteria_2.py  test_radial.py
