[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"

[project]
name = "pygeomatch"
version = "0.0.2"
authors = [
  { name="Paul Guardiola", email="Paul.Guardiola@ign.fr" },
  { name="Juste Raimbault", email="Juste.Raimbault@ign.fr" },
  { name="Ana-Maria Raimond", email="Ana-Maria.Raimond@ign.fr" },
  { name="Julien Perret", email="Julien.Perret@ign.fr" },
  { name="Nicolas Audebert", email="Nicolas.Audebert@ign.fr" },
]
description = "A package to match geographical features"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "bitarray>=3.8.0",
    "geopandas>=1.0.1",
    "more-itertools>=10.8.0",
    "networkx>=3.2.1",
    "pot>=0.9.6.post1",
    "typer>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/umrlastig/pygeomatch/"
Issues = "https://github.com/umrlastig/pygeomatch/issues"

[tool.uv.workspace]
members = [
    "pygeomatch",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[project.scripts]
pygeomatch = "pygeomatch.match:app"
